# ship-designer

./: Cargo.toml  README.md
.cargo/: config.toml
client/: Cargo.toml
client/assets/shaders/: building_material.wgsl
client/src/: app_setup.rs  building.rs  building_material.rs  camera.rs  connection_state.rs  fixed_input.rs  free_camera.rs  lib.rs  main.rs  mesh_generation.rs  meshes.rs  missile.rs  packet_handling.rs  part.rs  player_camera.rs  player_connection.rs  player_connection_event_systems.rs  player_controller.rs  player_movement.rs  raycast_selection.rs  settings.rs  shape.rs
client/src/part/: mod.rs
client/src/part/meshes/: mesh_generation.rs  mod.rs
client/tests/: fixed_input.rs
client/tests/scaffolding/: mod.rs
common/: Cargo.toml
common/src/: channels.rs  colliders.rs  compact_transform.rs  entity_lookup.rs  events.rs  fixed_update.rs  grid.rs  index.rs  lib.rs  materials.rs  missile.rs  network_id.rs  packets.rs  part.rs  player.rs  player_connection.rs  predefined_parts.rs  predefined_shapes.rs  reparent_global_transform.rs  shape.rs  shape_transform.rs  ship.rs
common/src/events/: building.rs  mod.rs  part.rs  player_connection.rs
common/src/packets/: mod.rs  primitive_impls.rs
common/src/part/: colliders.rs  events.rs  materials.rs  mod.rs
packets/: Cargo.toml
packets-derive/: Cargo.toml
packets-derive/src/: lib.rs
packets/src/: bevy_impls.rs  lib.rs  primitive_impls.rs  tuple_impls.rs
server/: Cargo.toml
server/src/: app_setup.rs  building_systems.rs  lib.rs  main.rs  missile.rs  network_id_generator.rs  packet_handling.rs  player_connection.rs  player_connection_event_systems.rs  server_state.rs
server/src/part/: mod.rs
server/tests/: part_placement.rs  player_management.rs
server/tests/scaffolding/: mod.rs
src/: camera.rs  main.rs  settings.rs
