[package]
name = "ship-designer-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ship-designer-common", path = "../common" }
bevy_mod_picking = "0.10"
bevy_mod_raycast = "0.7"
bevy_egui = "0.17"
bevy-inspector-egui = "0.14"
uflow = "0.6"
iyes_loopless = "0.9"
num_enum = "0.5"
bevy_rapier3d = { version = "0.19", features = [ "debug-render", "simd-stable" ] }

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_sprite",
    "bevy_pbr",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher"
]