[package]
name = "ship-designer-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ship-designer-common", path = "../common" }
bevy_egui = "0.20"
bevy-inspector-egui = "0.18"
uflow = "0.7"
num_enum = "0.5"
bevy_rapier3d = { version = "0.21", features = [ "debug-render-3d", "simd-stable" ] }
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_sprite",
    "bevy_pbr",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher"
]