[package]
name = "ship-designer-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ship-designer-common", path = "../common" }
packets = { path = "../packets" }

bevy_egui = "0.21"
bevy-inspector-egui = "0.19"
uflow = "0.7"
num_enum = "0.6"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", features = [ "debug-render-3d", "simd-stable" ] }

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_sprite",
    "bevy_pbr",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher"
]