[package]
name = "ship-designer-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false }
uflow = { git = "https://github.com/atomicbeef/uflow", branch = "configurable-timeout" }
num_enum = "0.5"
thiserror = "1.0"