[package]
name = "ship-designer-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy_rapier3d = { version = "0.21", features = [ "debug-render-3d", "simd-stable" ] }
uflow = "0.7"
num_enum = "0.5"
thiserror = "1.0"
crossbeam-channel = "0.5"