[package]
name = "ship-designer-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = { path = "../packets" }
packets-derive = { path = "../packets-derive" }

bevy = { version = "0.11", default-features = false }
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", features = [ "debug-render-3d", "simd-stable" ] }
uflow = "0.7"
num_enum = "0.6"
crossbeam-channel = "0.5"