[package]
name = "ship-designer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ship-designer-common", path = "../common" }
bevy = { version = "0.9", default-features = false }
uflow = "0.6"
iyes_loopless = "0.9"
num_enum = "0.5"