[package]
name = "ship-designer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ship-designer-common", path = "../common" }
uflow = "0.7"
iyes_loopless = "0.9"
num_enum = "0.5"
bevy_rapier3d = { version = "0.19", features = [ "simd-stable" ] }

[dependencies.bevy]
version = "0.9"
default-features = false
features = ["bevy_scene"]