[package]
name = "ship-designer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "ship-designer-common", path = "../common" }
packets = { path = "../packets" }

uflow = "0.7"
num_enum = "0.7"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", default-features = false, features = [ "simd-stable" ] }

[dependencies.bevy]
version = "0.11"
default-features = false
features = [ "bevy_scene" ]